# stock-sentiment-analysis

./: .gitignore  LICENSE  README.md  gitignore  pyproject.toml  requirements.txt
src/: app.py  http_cache.sqlite  main.py  requirements.txt  spaCy_transformer_models.ipynb  temps.txt  unit_tests.py
src/unit_tests/: unit_tests.py
src/utils/: data_funcs.py  handler_funcs.py  news_funcs.py  plot_funcs.py  session_funcs.py  unit_tests.py
